--- a/index.html
+++ b/index.html
@@ -3,8 +3,25 @@
 		 this is the HTML file loaded into my bookmark's description, 
 		 it holds the initial interface and templates 
 	-->
-
+	
 	<div class="page">
+
+		<!-- odp header -->
+		
+		<div id="hd">
+			<a id="logo" href="/" alt="dmoz logo" title="open directory project"></a>
+			<div id="partnership">
+				<img width="83" height="24" align="middle" alt="In Partnership with AOL Search" src="/img/aolsearch.gif"/>
+			</div>
+		</div>
+		<div id="hd-bar">
+		<div class="float-l">&nbsp;</div>
+			<div class="float-r">
+				<b><a href="/docs/en/about.html"> about dmoz</a></b> | <a href="/help/en/helpmain.html">help</a>
+			</div>
+			<div class="clear"></div>
+		</div>
+		<!-- end odp header -->
 
 		<div class="header">
 			<ul class="menu">
