--- a/index.html
+++ b/index.html
@@ -8,61 +8,75 @@
 		
 		<link rel="stylesheet" type="text/css" href="http://github.com/titoBouzout/ODPy/raw/master/css/forms.css">
 		<link rel="stylesheet" type="text/css" href="http://github.com/titoBouzout/ODPy/raw/master/css/page.css">
+	
+	<!-- js -->
+		
+		<!-- master libraries -->
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.4/jquery-ui.min.js"></script>
+		
+		<!-- libraries plugins -->
+		<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/jQueryPlugins/jquery.inputDefault.js"></script>
+	
+		<!-- lib functions -->
+			
+		<!-- this script -->
+		<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/ODPy.js"></script>
 
 	<!-- content -->
 
-	<div class="page">
-
-		<!-- odp header -->
-		
-		<div id="hd">
-			<a id="logo" href="/" alt="dmoz logo" title="open directory project"></a>
-			<div id="partnership">
-				<img width="83" height="24" align="middle" alt="In Partnership with AOL Search" src="/img/aolsearch.gif"/>
+		<div class="page">
+	
+			<!-- odp header -->
+			
+			<div id="hd">
+				<a id="logo" href="/" alt="dmoz logo" title="open directory project"></a>
+				<div id="partnership">
+					<img width="83" height="24" align="middle" alt="In Partnership with AOL Search" src="/img/aolsearch.gif"/>
+				</div>
 			</div>
-		</div>
-		<div id="hd-bar">
-		<div class="float-l">&nbsp;</div>
-			<div class="float-r">
-				<b><a href="/docs/en/about.html"> about dmoz</a></b> | <a href="/help/en/helpmain.html">help</a>
+			<div id="hd-bar">
+			<div class="float-l">&nbsp;</div>
+				<div class="float-r">
+					<b><a href="/docs/en/about.html"> about dmoz</a></b> | <a href="/help/en/helpmain.html">help</a>
+				</div>
+				<div class="clear"></div>
 			</div>
-			<div class="clear"></div>
-		</div>
-		<!-- end odp header -->
-
-		<div class="header">
-			<ul class="menu">
-				<li><a href="#">function1 menu</a></li>
-				<li><a href="#">function2 menu</a></li>
-				<li><a href="#">function3 menu</a></li>
-				<li><a href="#">function4 menu</a></li>
-				<li><a href="#">functionN menu</a></li>
-			</ul>
-		</div><!-- end header -->
-
-		<h1>Title</h1>
-
-		<h2>Description of page "Title"</h2>
-
-		<h3>Form functionN "title"</h3>
-
-		<form id="formu" name="formu">
-
-		<h5>Input element</h5>
-		<input type="text" title="Enter category here.."/>
-
-		<h5>Another input element</h5>
-		<textarea wrap="off" title="This is a multiline input text.."></textarea>
-
-		</form>
-
-	</div><!-- end page -->
-
-	<div class="footer">
-
-		<a href="http://github.com/titoBouzout/ODPy">ODPy</a> - An experimental editing interface based on <a href="http://jquery.com/">jQuery</a> and <a href="http://jqueryui.com/">jQueryUI</a> <br />
-		<a href="javascript://" onclick="$('.debug').toggle()">debug details</a><br />
-
-		<code class="debug" align="left">Here debuging code</code>
-
-	</div><!-- end footer -->
+			<!-- end odp header -->
+	
+			<div class="header">
+				<ul class="menu">
+					<li><a href="#">function1 menu</a></li>
+					<li><a href="#">function2 menu</a></li>
+					<li><a href="#">function3 menu</a></li>
+					<li><a href="#">function4 menu</a></li>
+					<li><a href="#">functionN menu</a></li>
+				</ul>
+			</div><!-- end header -->
+	
+			<h1>Title</h1>
+	
+			<h2>Description of page "Title"</h2>
+	
+			<h3>Form functionN "title"</h3>
+	
+			<form id="formu" name="formu">
+	
+			<h5>Input element</h5>
+			<input type="text" title="Enter category here.."/>
+	
+			<h5>Another input element</h5>
+			<textarea wrap="off" title="This is a multiline input text.."></textarea>
+	
+			</form>
+	
+		</div><!-- end page -->
+	
+		<div class="footer">
+	
+			<a href="http://github.com/titoBouzout/ODPy">ODPy</a> - An experimental editing interface based on <a href="http://jquery.com/">jQuery</a> and <a href="http://jqueryui.com/">jQueryUI</a> <br />
+			<a href="javascript://" onclick="$('.debug').toggle()">debug details</a><br />
+	
+			<code class="debug" align="left">Here debuging code</code>
+	
+		</div><!-- end footer -->
