More testing about loading my content on my Bookmark's description.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 		 it holds the initial interface and templates 
 	-->
 	
+	<!-- css -->
+		
+		<link rel="stylesheet" type="text/css" href="http://github.com/titoBouzout/ODPy/raw/master/css/forms.css">
+		<link rel="stylesheet" type="text/css" href="http://github.com/titoBouzout/ODPy/raw/master/css/page.css">
+
+	<!-- content -->
+
 	<div class="page">
 
 		<!-- odp header -->
