--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<body>
 
 	<!--
 		 this is the HTML file loaded into my bookmark's description, 
@@ -26,24 +27,7 @@
 	<!-- content -->
 
 		<div class="page">
-	
-			<!-- odp header -->
-			
-			<div id="hd">
-				<a id="logo" href="/" alt="dmoz logo" title="open directory project"></a>
-				<div id="partnership">
-					<img width="83" height="24" align="middle" alt="In Partnership with AOL Search" src="/img/aolsearch.gif"/>
-				</div>
-			</div>
-			<div id="hd-bar">
-			<div class="float-l">&nbsp;</div>
-				<div class="float-r">
-					<b><a href="/docs/en/about.html"> about dmoz</a></b> | <a href="/help/en/helpmain.html">help</a>
-				</div>
-				<div class="clear"></div>
-			</div>
-			<!-- end odp header -->
-	
+		
 			<div class="header">
 				<ul class="menu">
 					<li><a href="#">function1 menu</a></li>
@@ -80,3 +64,5 @@
 			<code class="debug" align="left">Here debuging code</code>
 	
 		</div><!-- end footer -->
+		
+</body>
