Fix for when there is no mozzie, fix a path pointing to localhost. Add URL navigation ( not testing )

--- a/document.html
+++ b/document.html
@@ -127,7 +127,7 @@
 				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/ODP/categoryCheckFormat.js"></script>
 				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/ODP/categoryGetFromURL.js"></script>
 				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/ODP/categoryGetLastChildName.js"></script>
-				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/ODP/categoryGetURLPublic.js"></script>
+				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/ODP/categoryGetURLPrivate.js"></script>
 				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/ODP/categoryParser.js"></script>
 				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/ODP/categorySanitize.js"></script>
 				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/ODP/categoryStartsWithValidName.js"></script>
@@ -135,7 +135,7 @@
 				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/ODP/isODPSubdomain.js"></script>
 
 			<!-- main -->
-			<script type="text/javascript" src="ODPy.js"></script>
+			<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/ODPy.js"></script>
 		
 		<section class="page">
 			
@@ -143,9 +143,9 @@
 			<aside class="margin"></aside>
 			<header>
 				<a title="Open Directory Project" href="http://www.dmoz.org/">
-					<img src="img/odphead.gif" width="222" height="25" align="middle" alt="Open Directory Project Logo" border="0">
+					<img src="http://github.com/titoBouzout/ODPy/raw/img/odphead.gif" width="222" height="25" align="middle" alt="Open Directory Project Logo" border="0">
 				</a>
-				<img width="83" height="24" align="middle" src="img/searchlogo_dmoz.gif" alt="In Partnership with AOL Search" style="float:right;">
+				<img width="83" height="24" align="middle" src="http://github.com/titoBouzout/ODPy/raw/img/searchlogo_dmoz.gif" alt="In Partnership with AOL Search" style="float:right;">
 				<nav class="menu">
 					<input 
 						type="text" 
