Fix images not loading.

--- a/document.html
+++ b/document.html
@@ -143,16 +143,16 @@
 			<aside class="margin"></aside>
 			<header>
 				<a title="Open Directory Project" href="http://www.dmoz.org/">
-					<img src="http://github.com/titoBouzout/ODPy/raw/img/odphead.gif" width="222" height="25" align="middle" alt="Open Directory Project Logo" border="0">
+					<img src="http://github.com/titoBouzout/ODPy/raw/master/odphead.gif" width="222" height="25" align="middle" alt="Open Directory Project Logo" border="0">
 				</a>
-				<img width="83" height="24" align="middle" src="http://github.com/titoBouzout/ODPy/raw/img/searchlogo_dmoz.gif" alt="In Partnership with AOL Search" style="float:right;">
+				<img width="83" height="24" align="middle" src="http://github.com/titoBouzout/ODPy/raw/master/searchlogo_dmoz.gif" alt="In Partnership with AOL Search" style="float:right;">
 				<nav class="menu">
 					<input 
 						type="text" 
 						id="category" 
 						placeholder="Type or paste a category path here.." 
 						title="Type or paste a category path here.." 
-						size="100" 
+						style="width:100%;" 
 						onkeyup="ODPy.loadCategory(this.value);" 
 						onchange="ODPy.loadCategory(this.value);"
 						onblur="ODPy.loadCategory(this.value);"
