Changes the load of the search engines links.

--- a/document.html
+++ b/document.html
@@ -211,17 +211,17 @@
 					<nav class="groups"></nav>
 
 					<!-- search -->
-					<nav class="search" onclick="if(event.originalTarget.tagName.toLowerCase() == 'a'){ event.preventDefault();return ODPy.computerSearch(event.originalTarget.href)}">
-						<a href="http://www.altavista.com/web/results?q=%s">AltaVista</a> - 
-						<a href="http://a9.com/%s">A9</a> - 
-						<a href="http://search.aol.com/aolcom/search?query=%s">AOL</a> - 
-						<a href="http://search.ask.com/web?q=%s">Ask</a> - 
-						<a href="http://www.bing.com/search?q=%s">Bing</a> - 
-						<a href="http://clusty.com/search?query=%s">Clusty</a> - 
-						<a href="http://gigablast.com/search?q=%s">Gigablast</a> - 
-						<a href="http://www.google.co.in/search?q=%s">Google</a> - 
-						<a href="http://search.lycos.com/?query=%s">Lycos</a> - 
-						<a href="http://search.yahoo.com/bin/search?p=%s">Yahoo</a>
+					<nav class="search" onclick="if(event.originalTarget.tagName.toLowerCase() == 'a'){ ODPy.computerSearch(event.originalTarget.title);}">
+						<a href="javascript://" title="http://www.altavista.com/web/results?q=%s">AltaVista</a> - 
+						<a href="javascript://" title="http://a9.com/%s">A9</a> - 
+						<a href="javascript://" title="http://search.aol.com/aolcom/search?query=%s">AOL</a> - 
+						<a href="javascript://" title="http://search.ask.com/web?q=%s">Ask</a> - 
+						<a href="javascript://" title="http://www.bing.com/search?q=%s">Bing</a> - 
+						<a href="javascript://" title="http://clusty.com/search?query=%s">Clusty</a> - 
+						<a href="javascript://" title="http://gigablast.com/search?q=%s">Gigablast</a> - 
+						<a href="javascript://" title="http://www.google.co.in/search?q=%s">Google</a> - 
+						<a href="javascript://" title="http://search.lycos.com/?query=%s">Lycos</a> - 
+						<a href="javascript://" title="http://search.yahoo.com/bin/search?p=%s">Yahoo</a>
 					</nav>
 
 					<!-- category editors -->
