Adding flip to library. And missing documents.

--- a/document.html
+++ b/document.html
@@ -21,6 +21,7 @@
 	<!--
 		this is the piece of code that is pasted into my bookmark's description, 
 		then this is loaded when my bookmark's description page is opened.
+		http://github.com/titoBouzout/ODPy/raw/master/
 	-->
 	
 	<!-- loading -->
@@ -88,53 +89,53 @@
 		
 		<!-- css -->
 			
-			<link rel="stylesheet" type="text/css" href="http://localhost/ODPy/css/forms.css"/>
-			<link rel="stylesheet" type="text/css" href="http://localhost/ODPy/css/page.css"/>
-			<link rel="stylesheet" type="text/css" href="http://localhost/ODPy/css/html5.fix.css"/>
-			<link rel="stylesheet" type="text/css" href="http://localhost/ODPy/css/odpy.css"/>
+			<link rel="stylesheet" type="text/css" href="http://github.com/titoBouzout/ODPy/raw/master/css/forms.css"/>
+			<link rel="stylesheet" type="text/css" href="http://github.com/titoBouzout/ODPy/raw/master/css/page.css"/>
+			<link rel="stylesheet" type="text/css" href="http://github.com/titoBouzout/ODPy/raw/master/css/html5.fix.css"/>
+			<link rel="stylesheet" type="text/css" href="http://github.com/titoBouzout/ODPy/raw/master/css/odpy.css"/>
 
 		<!-- js -->
 
 			<!-- master libraries -->
 			<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 			<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.4/jquery-ui.min.js"></script>
-			<script type="text/javascript" src="http://localhost/ODPy/lib/master/swfaddress.js"></script>
+			<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/master/swfaddress.js"></script>
 			
 			<!-- libraries plugins -->
-			<script type="text/javascript" src="http://localhost/ODPy/lib/plugins/jquery.inputDefault.js"></script>
+			<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/plugins/jquery.inputDefault.js"></script>
 		
 			<!-- libraries -->
-			<script type="text/javascript" src="http://localhost/ODPy/lib/ODP/categoryParser.js"></script>
+			<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/ODP/categoryParser.js"></script>
 				
 			<!-- utils -->
 				<!-- strings -->
-				<script type="text/javascript" src="http://localhost/ODPy/lib/strings/decodeUTF8.js"></script>
-				<script type="text/javascript" src="http://localhost/ODPy/lib/strings/encodeURI.js"></script>
-				<script type="text/javascript" src="http://localhost/ODPy/lib/strings/encodeUTF8.js"></script>
-				<script type="text/javascript" src="http://localhost/ODPy/lib/strings/htmlSpecialCharsDecode.js"></script>
-				<script type="text/javascript" src="http://localhost/ODPy/lib/strings/match.js"></script>
-				<script type="text/javascript" src="http://localhost/ODPy/lib/strings/string.js"></script>
-				<script type="text/javascript" src="http://localhost/ODPy/lib/strings/stripTags.js"></script>
-				<script type="text/javascript" src="http://localhost/ODPy/lib/strings/subStrCount.js"></script>
-				<script type="text/javascript" src="http://localhost/ODPy/lib/strings/trim.js"></script>
+				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/strings/decodeUTF8.js"></script>
+				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/strings/encodeURI.js"></script>
+				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/strings/encodeUTF8.js"></script>
+				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/strings/htmlSpecialCharsDecode.js"></script>
+				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/strings/match.js"></script>
+				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/strings/string.js"></script>
+				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/strings/stripTags.js"></script>
+				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/strings/subStrCount.js"></script>
+				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/strings/trim.js"></script>
 				<!-- urls -->
-				<script type="text/javascript" src="http://localhost/ODPy/lib/urls/getSubdomainFromURL.js"></script>
-				<script type="text/javascript" src="http://localhost/ODPy/lib/urls/removePort.js"></script>
-				<script type="text/javascript" src="http://localhost/ODPy/lib/urls/removeSubdomain.js"></script>
-				<script type="text/javascript" src="http://localhost/ODPy/lib/urls/removeWWW.js"></script>
+				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/urls/getSubdomainFromURL.js"></script>
+				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/urls/removePort.js"></script>
+				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/urls/removeSubdomain.js"></script>
+				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/urls/removeWWW.js"></script>
 				<!-- odp from the ODP Extension -->
-				<script type="text/javascript" src="http://localhost/ODPy/lib/ODP/categoryCheckFormat.js"></script>
-				<script type="text/javascript" src="http://localhost/ODPy/lib/ODP/categoryGetFromURL.js"></script>
-				<script type="text/javascript" src="http://localhost/ODPy/lib/ODP/categoryGetLastChildName.js"></script>
-				<script type="text/javascript" src="http://localhost/ODPy/lib/ODP/categoryGetURLPrivate.js"></script>
-				<script type="text/javascript" src="http://localhost/ODPy/lib/ODP/categoryParser.js"></script>
-				<script type="text/javascript" src="http://localhost/ODPy/lib/ODP/categorySanitize.js"></script>
-				<script type="text/javascript" src="http://localhost/ODPy/lib/ODP/categoryStartsWithValidName.js"></script>
-				<script type="text/javascript" src="http://localhost/ODPy/lib/ODP/categoryTitle.js"></script>
-				<script type="text/javascript" src="http://localhost/ODPy/lib/ODP/isODPSubdomain.js"></script>
+				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/ODP/categoryCheckFormat.js"></script>
+				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/ODP/categoryGetFromURL.js"></script>
+				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/ODP/categoryGetLastChildName.js"></script>
+				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/ODP/categoryGetURLPrivate.js"></script>
+				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/ODP/categoryParser.js"></script>
+				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/ODP/categorySanitize.js"></script>
+				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/ODP/categoryStartsWithValidName.js"></script>
+				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/ODP/categoryTitle.js"></script>
+				<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/lib/ODP/isODPSubdomain.js"></script>
 
 			<!-- main -->
-			<script type="text/javascript" src="http://localhost/ODPy/ODPy.js"></script>
+			<script type="text/javascript" src="http://github.com/titoBouzout/ODPy/raw/master/ODPy.js"></script>
 		
 		<section class="page">
 			
